@@ -11,4 +11,5 @@ License: GPL (>= 2)
 Encoding: UTF-8
 Imports: Rcpp (>= 0.12.6)
 LinkingTo: Rcpp, BH
+Suggests: gettz
 RoxygenNote: 5.0.1
